[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "uncompyle6"
description = "Python cross-version byte-code library and disassembler"
dependencies = [
    "click",
    "spark-parser >= 1.8.9, < 1.9.2",
    "xdis >= 6.1.0, < 6.3",
]
readme = "README.rst"

# 3.8 lingo
license = {text = "GPL"}

# Newer lingo
# license = "GPL-3.0-or-later"

keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 2.4",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/python-uncompyle6"
Downloads = "https://github.com/rocky/python-uncompyle6/releases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.scripts]
uncompyle6 = "uncompyle6.bin.uncompile:main_bin"
uncompyle6-tokenize = "uncompyle6.bin.pydisassemble:main"

[tool.setuptools.dynamic]
version = {attr = "uncompyle6.version.__version__"}

[tool.setuptools.packages.find]
include = ["uncompyle6*"]  # Include all subpackages

[tool.pyright]
include = ["trepan"]
# exclude = []
ignore = ["dist", "docs", "tmp", ".cache"]
