[bdist_rpm]
release = 0
packager = rocky <rb@dustyfeet.com
doc_files = README.rst
		ChangeLog
		COPYING
		DECOMPYLE-2.4-CHANGELOG.txt
		HISTORY.md
		HOW-TO_REPORT-A-BUG.md
		NEWS.md
#		doc/
#		examples/

[bdist_wheel]
universal=1

[metadata]
description_file = README.rst

[flake8]
# max-line-length setting: NO we do not want everyone writing 120-character lines!
# We are setting the maximum line length big here because there are longer
# lines allowed by black in some cases that are forbidden by flake8. Since
# black has the final say about code formatting issues, this setting is here to
# make sure that flake8 doesn't fail the build on longer lines allowed by
# black.
max-line-length = 120
max-complexity = 12
select = E,F,W,C,B,B9
ignore =
    # E123 closing bracket does not match indentation of opening bracket's line
    E123
    # E203 whitespace before ':' (Not PEP8 compliant, Python Black)
    E203
    # E501 line too long (82 > 79 characters) (replaced by B950 from flake8-bugbear,
    # https://github.com/PyCQA/flake8-bugbear)
    E501
    # W503 line break before binary operator (Not PEP8 compliant, Python Black)
    W503
    # W504 line break after binary operator (Not PEP8 compliant, Python Black)
    W504
    # C901 function too complex - since many of zz9 functions are too complex with a lot
    # of if branching
    C901
    # module level import not at top of file. This is too restrictive. Can't even have a
    # docstring higher.
    E402
per-file-ignores =
    # These are config files. The `c` variable them is injected not defined.
    pow/ansible/roles/jupyterhub/templates/jupyterhub_config*.py:F821
    # Ignore some errors in files that are stolen from other projects to avoid lots
    # of merge problems later .
    pow/ansible/roles/webtier/files/supervisor_httpgroupok.py:E126,E128,E222,E225,E226,E261,E301,E302,E305,F841,E201,E202
    silhouette/src/silhouette/gprof2dot.py:E711,E713,E741,F401
    # Ignore undefined name errors in "expectation" test Python code.
    # These files get exec'd in an environment that defines the variables.
    server/tests/files/expectations/*.py:F821
